# quick_os

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  boot.asm  boot.bios.asm  build.sh  configure  main.c  make_fat32.sh  make_fat_iso.sh  oside.sh  qemu-install.sh  run-efi.sh
bios-kern/: build.sh
efi-kern/: .make_img.sh.swo  CMakeLists.txt  crc32.h  crc32.spec.cxx  main.c
include/: fat.hxx  fat.spec.cxx  gpt.hxx  gpt.spec.cxx
src/: fat.cxx
toolchains/: clang.cmake
